WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102206
Fix the [-Wreturn-type] warning in JavaScriptCore/assembler/MacroAssemblerARM.h
https://bugs.webkit.org/show_bug.cgi?id=102206
Summary
Fix the [-Wreturn-type] warning in JavaScriptCore/assembler/MacroAssemblerARM.h
Csaba Osztrogonác
Reported
2012-11-14 02:51:36 PST
/home/oszi/WebKit/Source/JavaScriptCore/assembler/MacroAssemblerARM.h:1274:5: warning: no return statement in function returning non-void [-Wreturn-type This warning introduced in
http://trac.webkit.org/changeset/134383
static CodeLocationLabel startOfPatchableBranchPtrWithPatch(CodeLocationDataLabelPtr label) { UNREACHABLE_FOR_PLATFORM(); }
Attachments
speculative fix
(1.42 KB, patch)
2012-11-14 06:29 PST
,
Peter Gal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Gal
Comment 1
2012-11-14 06:29:57 PST
Created
attachment 174145
[details]
speculative fix This is same as in the MacroAssemblerARMv7.h.
Csaba Osztrogonác
Comment 2
2012-11-14 06:31:08 PST
Comment on
attachment 174145
[details]
speculative fix Thanks for the quick fix, r=me.
Csaba Osztrogonác
Comment 3
2012-11-14 06:52:33 PST
Comment on
attachment 174145
[details]
speculative fix Clearing flags on attachment: 174145 Committed
r134603
: <
http://trac.webkit.org/changeset/134603
>
Csaba Osztrogonác
Comment 4
2012-11-14 06:52:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug