Fix the [-Wreturn-type] warning in JavaScriptCore/assembler/MacroAssemblerARM.h https://bugs.webkit.org/show_bug.cgi?id=102206

Patch by Peter Gal <galpeter@inf.u-szeged.hu> on 2012-11-14
Reviewed by Csaba Osztrogonác.

Add a return value for the function to suppress the warning.

* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::startOfPatchableBranchPtrWithPatch):

Canonical link: https://commits.webkit.org/120328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134603 268f45cc-cd09-0410-ab3c-d52691b4dbfc